Use the new namespace of the nb connector [run-notebook-tests]

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/cloud/01_import_data.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/cloud/01_import_data.ipynb
@@ -92,7 +92,7 @@
    "outputs": [],
    "source": [
     "import pyexasol\n",
-    "from exasol.connections import open_pyexasol_connection"
+    "from exasol.nb_connector.connections import open_pyexasol_connection"
    ],
    "metadata": {
     "collapsed": false
