--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sagemaker/sme_init.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sagemaker/sme_init.ipynb
@@ -80,7 +80,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from exasol.sagemaker_extension_wrapper import initialize_sme_extension\n",
+    "from exasol.nb_connector.sagemaker_extension_wrapper import initialize_sme_extension\n",
     "\n",
     "initialize_sme_extension(ai_lab_config)"
    ]
