--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sklearn/sklearn_predict_abalone.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sklearn/sklearn_predict_abalone.ipynb
@@ -50,7 +50,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from exasol.connections import open_pyexasol_connection, get_udf_bucket_path\n",
+    "from exasol.nb_connector.connections import open_pyexasol_connection, get_udf_bucket_path\n",
     "from stopwatch import Stopwatch\n",
     "\n",
     "target_column = 'RINGS'\n",
