--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sklearn/sklearn_train_abalone.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sklearn/sklearn_train_abalone.ipynb
@@ -52,7 +52,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from exasol.connections import open_pyexasol_connection\n",
+    "from exasol.nb_connector.connections import open_pyexasol_connection\n",
     "from sklearn.model_selection import train_test_split\n",
     "from stopwatch import Stopwatch\n",
     "\n",
@@ -198,7 +198,7 @@
    "outputs": [],
    "source": [
     "import pickle\n",
-    "from exasol.connections import open_bucketfs_connection\n",
+    "from exasol.nb_connector.connections import open_bucketfs_connection\n",
     "\n",
     "MODEL_FILE = 'abalone_svm_model.pkl'\n",
     "\n",
