--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/te_init.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/te_init.ipynb
@@ -76,7 +76,7 @@
    },
    "outputs": [],
    "source": [
-    "from exasol.transformers_extension_wrapper import initialize_te_extension\n",
+    "from exasol.nb_connector.transformers_extension_wrapper import initialize_te_extension\n",
     "\n",
     "initialize_te_extension(ai_lab_config)"
    ]
