--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/text_generation.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/text_generation.ipynb
@@ -116,8 +116,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from exasol.connections import open_pyexasol_connection\n",
-    "from exasol.language_container_activation import get_activation_sql\n",
+    "from exasol.nb_connector.connections import open_pyexasol_connection\n",
+    "from exasol.nb_connector.language_container_activation import get_activation_sql\n",
     "\n",
     "# We will be creating a new database session every time we call the model.\n",
     "# We will have to activate the language container for each of these sessions.\n",
