--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/utils/model_retrieval.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/utils/model_retrieval.ipynb
@@ -36,7 +36,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from exasol.secret_store import Secrets\n",
+    "from exasol.nb_connector.secret_store import Secrets\n",
     "\n",
     "\n",
     "def load_huggingface_model_udf(conf: Secrets, model_name: str) -> None:\n",
@@ -47,9 +47,9 @@
     "    model_name     - Name of the model at Huggingface hub, e.g. facebook/nllb-moe-54b.\n",
     "    \"\"\"\n",
     "\n",
-    "    from exasol.connections import open_pyexasol_connection\n",
-    "    from exasol.language_container_activation import get_activation_sql\n",
-    "    from exasol.ai_lab_config import AILabConfig as CKey\n",
+    "    from exasol.nb_connector.connections import open_pyexasol_connection\n",
+    "    from exasol.nb_connector.language_container_activation import get_activation_sql\n",
+    "    from exasol.nb_connector.ai_lab_config import AILabConfig as CKey\n",
     "\n",
     "    sql = f\"\"\"\n",
     "    SELECT {conf.get(CKey.db_schema)}.TE_MODEL_DOWNLOADER_UDF(\n",
@@ -93,8 +93,8 @@
     "\n",
     "    from pathlib import Path\n",
     "    import re\n",
-    "    from exasol.transformers_extension_wrapper import upload_model\n",
-    "    from exasol.ai_lab_config import AILabConfig as CKey\n",
+    "    from exasol.nb_connector.transformers_extension_wrapper import upload_model\n",
+    "    from exasol.nb_connector.ai_lab_config import AILabConfig as CKey\n",
     "\n",
     "    # Make a name for the model sub-directory\n",
     "    sub_dir = re.sub(r\"[/\\\\?%*:|\\\"<>\\x7F\\x00-\\x1F]\", \"-\", model_name)\n",
