--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/utils/access_store_ui.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/utils/access_store_ui.ipynb
@@ -17,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from exasol.utils import upward_file_search\n",
+    "from exasol.nb_connector.utils import upward_file_search\n",
     "\n",
     "# This NB may be running from various locations in the NB hierarchy.\n",
     "# Need to search for the styles NB from the current directory upwards.\n",
@@ -37,7 +37,7 @@
     "from pathlib import Path\n",
     "import ipywidgets as widgets\n",
     "\n",
-    "from exasol.secret_store import Secrets\n",
+    "from exasol.nb_connector.secret_store import Secrets\n",
     "\n",
     "\n",
     "def get_access_store_ui(root_dir: str = '.') -> widgets.Widget:\n",
