--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/utils/jupysql_init.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/utils/jupysql_init.ipynb
@@ -17,8 +17,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from exasol.connections import open_sqlalchemy_connection\n",
-    "from exasol.language_container_activation import get_activation_sql\n",
+    "from exasol.nb_connector.connections import open_sqlalchemy_connection\n",
+    "from exasol.nb_connector.language_container_activation import get_activation_sql\n",
     "\n",
     "engine = open_sqlalchemy_connection(ai_lab_config)\n",
     "\n",
