--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/cloud_store_config.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/cloud_store_config.ipynb
@@ -34,7 +34,7 @@
    "outputs": [],
    "source": [
     "from exasol import github, bfs_utils, cloud_storage\n",
-    "from exasol.connections import open_bucketfs_connection, open_pyexasol_connection\n",
+    "from exasol.nb_connector.connections import open_bucketfs_connection, open_pyexasol_connection\n",
     "\n",
     "jar_local_path = github.retrieve_jar(github.Project.CLOUD_STORAGE_EXTENSION, use_local_cache=True)\n",
     "bfs_bucket = open_bucketfs_connection(ai_lab_config)\n",
