--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sagemaker/utils/sme_init_ui.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sagemaker/utils/sme_init_ui.ipynb
@@ -17,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from exasol.utils import upward_file_search\n",
+    "from exasol.nb_connector.utils import upward_file_search\n",
     "\n",
     "# This NB may be running from various locations in the NB hierarchy.\n",
     "# Need to search for other supporting NBs from the current directory upwards.\n",
@@ -35,8 +35,8 @@
     "from enum import Enum\n",
     "import ipywidgets as widgets\n",
     "\n",
-    "from exasol.secret_store import Secrets\n",
-    "from exasol.ai_lab_config import AILabConfig as CKey\n",
+    "from exasol.nb_connector.secret_store import Secrets\n",
+    "from exasol.nb_connector.ai_lab_config import AILabConfig as CKey\n",
     "\n",
     "\n",
     "def get_sme_config_ui(conf: Secrets) -> widgets.Widget:\n",
