--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sklearn/sklearn_train_telescope.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sklearn/sklearn_train_telescope.ipynb
@@ -52,7 +52,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from exasol.connections import open_pyexasol_connection\n",
+    "from exasol.nb_connector.connections import open_pyexasol_connection\n",
     "from stopwatch import Stopwatch\n",
     "\n",
     "stopwatch = Stopwatch()\n",
@@ -144,7 +144,7 @@
    "outputs": [],
    "source": [
     "import pickle\n",
-    "from exasol.connections import open_bucketfs_connection\n",
+    "from exasol.nb_connector.connections import open_bucketfs_connection\n",
     "\n",
     "MODEL_FILE = 'telescope_tree_model.pkl'\n",
     "\n",
