--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/utils/generic_config_ui.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/utils/generic_config_ui.ipynb
@@ -17,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from exasol.utils import upward_file_search\n",
+    "from exasol.nb_connector.utils import upward_file_search\n",
     "\n",
     "# This NB may be running from various locations in the NB hierarchy.\n",
     "# Need to search for the styles NB from the current directory upwards.\n",
@@ -36,8 +36,8 @@
     "from itertools import chain\n",
     "import ipywidgets as widgets\n",
     "\n",
-    "from exasol.secret_store import Secrets\n",
-    "from exasol.ai_lab_config import AILabConfig as CKey\n",
+    "from exasol.nb_connector.secret_store import Secrets\n",
+    "from exasol.nb_connector.ai_lab_config import AILabConfig as CKey\n",
     "\n",
     "\n",
     "def get_generic_config_ui(conf: Secrets, \n",
