--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/utils/main_config_ui.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/utils/main_config_ui.ipynb
@@ -17,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from exasol.utils import upward_file_search\n",
+    "from exasol.nb_connector.utils import upward_file_search\n",
     "\n",
     "# This NB may be running from various locations in the NB hierarchy.\n",
     "# Need to search for other supporting NBs from the current directory upwards.\n",
@@ -35,12 +35,12 @@
    "outputs": [],
    "source": [
     "from typing import List\n",
-    "from exasol.secret_store import Secrets\n",
-    "from exasol.ai_lab_config import AILabConfig as CKey\n",
+    "from exasol.nb_connector.secret_store import Secrets\n",
+    "from exasol.nb_connector.ai_lab_config import AILabConfig as CKey\n",
     "import ipywidgets as widgets\n",
     "\n",
-    "from exasol.ai_lab_config import AILabConfig as CKey\n",
-    "from exasol.itde_manager import (bring_itde_up, is_itde_running, start_itde, take_itde_down)\n",
+    "from exasol.nb_connector.ai_lab_config import AILabConfig as CKey\n",
+    "from exasol.nb_connector.itde_manager import (bring_itde_up, is_itde_running, start_itde, take_itde_down)\n",
     "\n",
     "\n",
     "class ITDEStatus(Enum):\n",
