--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/cloud_store_config.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/cloud_store_config.ipynb
@@ -33,7 +33,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "from exasol import github, bfs_utils, cloud_storage\n",
+    "from exasol.nb_connector import github, bfs_utils, cloud_storage\n",
     "from exasol.nb_connector.connections import open_bucketfs_connection, open_pyexasol_connection\n",
     "\n",
     "jar_local_path = github.retrieve_jar(github.Project.CLOUD_STORAGE_EXTENSION, use_local_cache=True)\n",
