Fixed typo in notebook/transformers/te_introduction.ipynb

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/te_introduction.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/te_introduction.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Introduction\n",
     "\n",
-    "This set of notebooks demonstrates the functionality of the Exasol Transformer Extension. The extension allows the use of a pre-trained NLP model that can be found at the Haggingface Model Hub. It consists of a number of UDF and Lua scripts. The scripts can be uploaded into the database using a Python library.\n",
+    "This set of notebooks demonstrates the functionality of the Exasol Transformer Extension. The extension allows the use of a pre-trained NLP model that can be found at the Huggingface Model Hub. It consists of a number of UDF and Lua scripts. The scripts can be uploaded into the database using a Python library.\n",
     "\n",
     "For more information, please refer to the Transformer Extension <a href=\"https://github.com/exasol/transformers-extension/blob/main/doc/user_guide/user_guide.md\" target=\"_blank\" rel=\"noopener\">User Guide</a>.\n",
     "\n",
