Minor np text change and altered dependency [run-notebook-tests]

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/main_config.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/main_config.ipynb
@@ -61,11 +61,9 @@
    "source": [
     "## Choose the database\n",
     "\n",
-    "First, we need to choose which database we will work with. The AI-Lab includes a so-called Exasol Docker-DB. This is a single-node database running in a Docker container. It's a good choice of a database for any light-weight experiment designed as a proof of concept.\n",
+    "First, choose the database—AI-Lab offers an Exasol Docker-DB, a single-node Docker container database, ideal for lightweight proof-of-concept experiments. For solving real world tasks, consider an external Exasol database.\n",
     "\n",
-    "For more practical work one might choose a customer database with real data.\n",
-    "\n",
-    "The choice of the database is saved in the configuration store. If this step has already been completed there is no need to repeat it unless we want to start using another database."
+    "The chosen database is stored in the configuration. If configured, no need to repeat unless switching to another database is desired."
    ]
   },
   {
@@ -107,7 +105,7 @@
     "\n",
     "If we choose to use the Exasol Docker-DB we need to launch it after every restart of the AI-Lab. This operation may take a few moments. Please wait till it is completed before proceeding with the next step.\n",
     "\n",
-    "For a customer database, this operation will take no effect."
+    "For an external Exasol database, this operation will have no effect."
    ]
   },
   {
