made useful_urls a python module

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/utils/main_config_ui.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/utils/main_config_ui.ipynb
@@ -24,8 +24,7 @@
     "\n",
     "%run {upward_file_search('utils/ui_styles.ipynb')}\n",
     "%run {upward_file_search('utils/generic_config_ui.ipynb')}\n",
-    "%run {upward_file_search('utils/popup_message_ui.ipynb')}\n",
-    "%run {upward_file_search('utils/useful_urls.ipynb')}"
+    "%run {upward_file_search('utils/popup_message_ui.ipynb')}"
    ]
   },
   {
@@ -263,6 +262,8 @@
     "            btn.style = ui_look.button_style\n",
     "            btn.layout = ui_look.button_layout\n",
     "    else:\n",
+    "        from utils.useful_urls import UsefulURLs\n",
+    "\n",
     "        warning_text = f'The docker socket is not mounted. Please consult the ' \\\n",
     "            f'<a href=\"{UsefulURLs.user_manual_docker_db.value}\" target=\"_blank\">documentation</a> ' \\\n",
     "            'on how to start the AI-Lab that will use the Integrated Exasol Docker-DB.'\n",
