Check if the docker socket is mounted. (#238)
* Checks if the docker socket is mounted.

* made useful_urls a python module

* added missed useful_urls.py

* [run-notebook-tests]

* Fix notebook_test_dockerfile_content

* [run-notebook-tests]

* [run-notebook-tests]

* [run-notebook-tests]

* [run-notebook-tests]

---------

Co-authored-by: Torsten Kilias <torsten.kilias@exasol.com>

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/utils/main_config_ui.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/utils/main_config_ui.ipynb
@@ -35,6 +35,7 @@
    "outputs": [],
    "source": [
     "from typing import List\n",
+    "import os\n",
     "from exasol.nb_connector.secret_store import Secrets\n",
     "from exasol.nb_connector.ai_lab_config import AILabConfig as CKey\n",
     "import ipywidgets as widgets\n",
@@ -50,6 +51,7 @@
     "    running = 'Exasol Docker-DB is RUNNING'\n",
     "    stopped = 'Exasol Docker-DB is STOPPED'\n",
     "    missing = 'Exasol Docker-DB is NOT CREATED'\n",
+    "    inaccessible = 'Exasol Docker-DB is INACCESSIBLE'\n",
     "\n",
     "\n",
     "def get_db_selection_ui(conf: Secrets) -> widgets.Widget:\n",
@@ -208,6 +210,11 @@
     "        return [btn_start]\n",
     "\n",
     "\n",
+    "def _create_warning(warning_text: str) -> widgets.Widget:\n",
+    "    return widgets.HTML(value='<style>p.itde_warning{word-wrap: break-word; color: red;}</style>' \\\n",
+    "                        '<p class=\"itde_warning\">' + warning_text + ' </p>')\n",
+    "\n",
+    "\n",
     "def get_start_docker_db_ui(conf: Secrets) -> widgets.Widget:\n",
     "    \"\"\"\n",
     "    A UI for starting or restarting the Exasol Docker-DB.\n",
@@ -220,8 +227,14 @@
     "\n",
     "    ui_look = get_config_styles()\n",
     "\n",
+    "    # Check if the docker-socket has been mounted\n",
+    "    socket_mounted = os.path.exists('/var/run/docker.sock')\n",
+    "\n",
     "    # Get the current status of the Exasol Docker-DB.\n",
-    "    itde_exists, itde_running = is_itde_running(conf)\n",
+    "    if socket_mounted:\n",
+    "        itde_exists, itde_running = is_itde_running(conf)\n",
+    "    else:\n",
+    "        itde_exists, itde_running = False, False\n",
     "\n",
     "    # Display the status.\n",
     "    header_lbl = widgets.Label(style=ui_look.header_style, layout=ui_look.header_layout)\n",
@@ -229,24 +242,35 @@
     "        header_lbl.value = ITDEStatus.running.value\n",
     "    elif itde_exists:\n",
     "        header_lbl.value = ITDEStatus.stopped.value\n",
+    "    elif not socket_mounted:\n",
+    "        header_lbl.value = ITDEStatus.inaccessible.value\n",
     "    else:\n",
     "        header_lbl.value = ITDEStatus.missing.value\n",
     "    group_items = [header_lbl]\n",
-    "        \n",
-    "    # Add a warning message about recreating an existing Exasol Docker-DB.\n",
-    "    if itde_exists:\n",
-    "        warning_text = 'Please note that recreating the Exasol Docker-DB will result in the loss of all data stored in the ' \\\n",
-    "            f'{\"running\" if itde_running else \"existing\"} instance of the database!'\n",
-    "        warning_html = widgets.HTML(value= '<style>p.itde_warning{word-wrap: break-word; color: red;}</style>' \\\n",
-    "                                    '<p class=\"itde_warning\">' + warning_text + ' </p>')\n",
+    "    \n",
+    "    if socket_mounted:\n",
+    "        # Add a warning message about recreating an existing Exasol Docker-DB.\n",
+    "        if itde_exists:\n",
+    "            warning_text = 'Please note that recreating the Exasol Docker-DB will result in the loss of all data stored in the ' \\\n",
+    "                f'{\"running\" if itde_running else \"existing\"} instance of the database!'\n",
+    "            warning_html = _create_warning(warning_text)\n",
+    "            group_items.append(widgets.Box([warning_html], layout=ui_look.row_layout))\n",
+    "    \n",
+    "        # Create action buttons.\n",
+    "        action_buttons = _get_docker_db_action_buttons(conf, itde_exists, itde_running, header_lbl)\n",
+    "        for btn in action_buttons:\n",
+    "            btn.style = ui_look.button_style\n",
+    "            btn.layout = ui_look.button_layout\n",
+    "    else:\n",
+    "        from utils.useful_urls import UsefulURLs\n",
+    "\n",
+    "        warning_text = f'The docker socket is not mounted. Please consult the ' \\\n",
+    "            f'<a href=\"{UsefulURLs.user_manual_docker_db.value}\" target=\"_blank\">documentation</a> ' \\\n",
+    "            'on how to start the AI-Lab that will use the Integrated Exasol Docker-DB.'\n",
+    "        warning_html = _create_warning(warning_text)\n",
     "        group_items.append(widgets.Box([warning_html], layout=ui_look.row_layout))\n",
-    "\n",
-    "    # Create action buttons.\n",
-    "    action_buttons = _get_docker_db_action_buttons(conf, itde_exists, itde_running, header_lbl)\n",
-    "    for btn in action_buttons:\n",
-    "        btn.style = ui_look.button_style\n",
-    "        btn.layout = ui_look.button_layout\n",
-    "\n",
+    "        action_buttons = []\n",
+    "        \n",
     "    # Put all UI elements together.\n",
     "    items = [widgets.Box(group_items, layout=ui_look.group_layout),\n",
     "             widgets.Box(action_buttons, layout=ui_look.row_layout)]\n",
