[run-notebook-tests]

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/cloud/01_import_data.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/cloud/01_import_data.ipynb
@@ -251,7 +251,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Let's check that data was imported"
+    "Let's check that data was imported by the process above"
    ],
    "metadata": {
     "collapsed": false
