--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/te_init.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/te_init.ipynb
@@ -58,7 +58,7 @@
     "\n",
     "<b>This operation normally takes a considerable amount of time to complete</b>\n",
     "\n",
-    "When the initialization finishes we should see a printed output suggesting us to activate the language container. Let's take it as an indication of the successful completion of the initialization procedure. We are not going to do the language container activation manually."
+    "When the initialization finishes we should see a printed output suggesting us to activate the language container. Let's take it as an indication of the successful completion of the initialization procedure. The language container activation will be executed at the session level once the connection to the database is established. Most tasks in this part of the tutorial use JupySQL which connects to the database via SQLAlchemy. In that case, the container activation is included in the routine that enables the JupySQL."
    ]
   },
   {
