#277 Addressed the review issues [run-notebook-tests]

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/utils/main_config_ui.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/utils/main_config_ui.ipynb
@@ -138,7 +138,7 @@
     "\n",
     "def get_saas_db_config_ui(conf: Secrets) -> widgets.Widget:\n",
     "    \"\"\"\n",
-    "    Creates a UI form for editing the Exasol Docker-DB configuration.\n",
+    "    Creates a UI form for editing the Exasol SaaS database configuration.\n",
     "    \"\"\"\n",
     "\n",
     "    inputs = [\n",
